--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <aside>
             <h2>Artigos relacionados</h2>
 
-            <figure>
+            <figure class="item">
                 <img src="./assets/unsplash_gKXKBY-C-Dk.jpg" alt="cesta cheia de filhotes de gatos em um jardim">
 
                 <figcaption class="details">
@@ -74,7 +74,7 @@
                 </figcaption>
             </figure>
 
-            <figure>
+            <figure class="item" style="--delay: .8s;">
                 <img src="./assets/unsplash_YCPkW_r_6uA.jpg" alt="">
 
                 <figcaption class="details">
@@ -83,7 +83,7 @@
                 </figcaption>
             </figure>
 
-            <figure>
+            <figure class="item" style="--delay: 1.2s;">
                 <img src="./assets/unsplash_psnx6RsRCYg.jpg" alt="gato branco com as costas pretas em frente a uma parede colorida">
 
                 <figcaption class="details">
@@ -92,7 +92,7 @@
                 </figcaption>
             </figure>
 
-            <figure>
+            <figure class="item" style="--delay: 1.6s;">
                 <img src="./assets/unsplash_NodtnCsLdTE.jpg" alt="gato em cima da cama com um cobertor marrom em cima dele e sua cabeça saindo para fora do cobertor">
 
                 <figcaption class="details">
@@ -101,7 +101,7 @@
                 </figcaption>
             </figure>
 
-            <figure>
+            <figure class="item" style="--delay: 2s;">
                 <img src="./assets/unsplash_so5nsYDOdxw.jpg" alt="gato em cima da cama">
 
                 <figcaption class="details">
